feat: 更新项目名称为“羲梦超级智能体”并修改相关文档

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>FastbuildAI - Fast Build Your AI Application.⚡️</title>
+        <title>羲梦超级智能体 - Fast Build Your AI Application.⚡️</title>
         <link rel="icon" href="/favicon.ico" />
         <style>
             body {
